# tree_census

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: benchmarks.ipynb  eda.ipynb  final.ipynb  models.ipynb  shap.ipynb  tree_census.ipynb
references/: nyc_boroughs.json
reports/test/: test.tex
reports/tex/: cup-journal.cls  sample.aux  sample.bbl-SAVE-ERROR  sample.bcf-SAVE-ERROR  sample.fdb_latexmk  sample.fls  sample.tex
